--- a/BSiNS/Src/xmlNabavniNalog.fx.yaml
+++ b/BSiNS/Src/xmlNabavniNalog.fx.yaml
@@ -999,8 +999,8 @@
                     Notify("Error occurred while Get request, check if file exists.",NotificationType.Error,5000),
                     Set(purchase, GetXML_Nabavni_Nalog.Run(file_Name, "ReadyForProcessing"))
                 );
-                
-                Set(purchase_line, purchase.purchase_line); 
+                UpdateContext({purchase_line: purchase.purchase_line});
+                //Set(purchase_line, purchase.purchase_line); 
                 Set(purchase_header, ParseJSON(purchase.purchase_header));
                 
                 
