--- a/BSiNS/Src/xmlNabavniNalog.fx.yaml
+++ b/BSiNS/Src/xmlNabavniNalog.fx.yaml
@@ -999,10 +999,9 @@
                     Notify("Error occurred while Get request, check if file exists.",NotificationType.Error,5000),
                     Set(purchase, GetXML_Nabavni_Nalog.Run(file_Name, "ReadyForProcessing"))
                 );
-                UpdateContext({purchase_line: purchase.purchase_line});
-                //Set(purchase_line, purchase.purchase_line); 
-                Set(purchase_header, ParseJSON(purchase.purchase_header));
                 
+                UpdateContext({purchase_line: purchase.purchase_line});
+                UpdateContext({purchase_header: ParseJSON(purchase.purchase_header)});
                 
                 Clear(colPurchaseLines);
                 ForAll(
