--- a/BSiNS/Src/App.fx.yaml
+++ b/BSiNS/Src/App.fx.yaml
@@ -4,6 +4,7 @@ App As appinfo:
         =conPrimary = ColorValue("#0AA9FF");
         conAccent = ColorValue("#676767");
         conUser = LookUp(Contacts,Email = User().Email);
+    OnStart: =
     Theme: =PowerAppsTheme
 
     Host As hostControl.DefaultHostControlVariant:
