--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -2,28 +2,37 @@
     Fill: =RGBA(45, 128, 40, 1)
     LoadingSpinnerColor: =RGBA(164, 38, 44, 1)
     OnHidden: |-
-        =UpdateContext({Status: "All", FileType: "All"});
-    OnVisible: |-
+        =UpdateContext({Status: "All", FileType: "All",XMLFiles:Blank()});
+    OnVisible: |
         =//IfError(GetAll.Run("AM-01"),Notify("Error occurred while Get All files request.",NotificationType.Error,2000),Set(getAllFiles, GetAll.Run("AM-01")));
         //Set(ReadyForProcessingFiles,getAllFiles.allreadyforprocessing);
         UpdateContext(
             {
                 WarehouseCode: "AM-01",
-                Status: "All",
-                FileType: "All"
+                IsLoadingGetAllFiles: true
             }
         );
         UpdateContext(
             {
-                XMLFiles: 
-                    GetAll.Run(
-                        WarehouseCode,
-                        Status,
-                        FileType
-                    ).xmlfiles
-                
+                XMLFiles: Table(
+                    ForAll(
+                        ParseJSON(
+                            GetAll.Run(
+                                WarehouseCode,
+                                dd_Status.Selected.Value,
+                                dd_FileType.Selected.Value
+                            ).xmlfiles
+                        ) As file,
+                        {
+                            FileName: Text(file.FileName),
+                            FileType: Text(file.FileType),
+                            FolderName: Text(file.FolderName)
+                        }
+                    )
+                )
             }
         );
+        UpdateContext({IsLoadingGetAllFiles: false});
 
     ScreenContainer2 As groupContainer.verticalAutoLayoutContainer:
         DropShadow: =DropShadow.Light
@@ -956,16 +965,28 @@
                         LayoutMinHeight: =32
                         LayoutMinWidth: =320
                         OnChange: |
-                            =UpdateContext({Status: dd_Status.Selected.Value});
+                            =UpdateContext({IsLoadingGetAllFiles: true});
                             UpdateContext(
                                 {
-                                    XMLFiles: Split(GetAll.Run(
-                                        WarehouseCode,
-                                        Status,
-                                        FileType
-                                    ).xmlfiles, ",")
+                                    XMLFiles: Table(
+                                        ForAll(
+                                            ParseJSON(
+                                                GetAll.Run(
+                                                    WarehouseCode,
+                                                    dd_Status.Selected.Value,
+                                                    dd_FileType.Selected.Value
+                                                ).xmlfiles
+                                            ) As file,
+                                            {
+                                                FileName: Text(file.FileName),
+                                                FileType: Text(file.FileType),
+                                                FolderName: Text(file.FolderName)
+                                            }
+                                        )
+                                    )
                                 }
                             );
+                            UpdateContext({IsLoadingGetAllFiles: false});
                         Width: =652
                         X: =0
                         Y: =0
@@ -981,16 +1002,28 @@
                         LayoutMinHeight: =32
                         LayoutMinWidth: =320
                         OnChange: |
-                            =UpdateContext({FileType: dd_FileType.Selected.Value});
+                            =UpdateContext({IsLoadingGetAllFiles: true});
                             UpdateContext(
                                 {
-                                    XMLFiles: Split(GetAll.Run(
-                                        WarehouseCode,
-                                        Status,
-                                        FileType
-                                    ).xmlfiles, ",")
+                                    XMLFiles: Table(
+                                        ForAll(
+                                            ParseJSON(
+                                                GetAll.Run(
+                                                    WarehouseCode,
+                                                    dd_Status.Selected.Value,
+                                                    dd_FileType.Selected.Value
+                                                ).xmlfiles
+                                            ) As file,
+                                            {
+                                                FileName: Text(file.FileName),
+                                                FileType: Text(file.FileType),
+                                                FolderName: Text(file.FolderName)
+                                            }
+                                        )
+                                    )
                                 }
                             );
+                            UpdateContext({IsLoadingGetAllFiles: false});
                         Width: =647
                         X: =0
                         Y: =0
@@ -1001,12 +1034,14 @@
                     BorderColor: =RGBA(89, 0, 0, 1)
                     DelayItemLoading: =true
                     Height: =321
+                    Items: =XMLFiles
                     Layout: =Layout.Vertical
                     LayoutMinHeight: =287
                     LayoutMinWidth: =320
                     LoadingSpinner: =LoadingSpinner.Data
                     TemplatePadding: =0
                     TemplateSize: =80
+                    Visible: =!IsLoadingGetAllFiles
                     X: =40
                     ZIndex: =3
 
@@ -1020,7 +1055,7 @@
                         PaddingLeft: =0
                         PaddingRight: =0
                         PaddingTop: =0
-                        Text: =ThisItem.SampleHeading
+                        Text: =ThisItem.FileName
                         VerticalAlign: =VerticalAlign.Top
                         Width: =Parent.TemplateWidth - 86
                         X: =16
@@ -1035,7 +1070,23 @@
                         DisabledColor: =RGBA(244, 244, 244, 1)
                         Height: =50
                         Icon: =Icon.ChevronRight
-                        OnSelect: =Select(Parent)
+                        OnSelect: |-
+                            =Select(Parent);
+                            Switch(
+                                Parent.Selected.FileType,
+                                "01",
+                                Navigate(xmlTemeljniceInventure),
+                                "02",
+                                Navigate(xmlNabavniNalog),
+                                "03",
+                                Navigate(xmlNalogZaProdaju),
+                                "04",
+                                Navigate(xmlNalogZaPrenos),
+                                "05",
+                                Navigate(xmlPrimke)
+                            );
+                            Set(SelectedFile, ThisItem.FileName);
+                            Set(SelectedFolder, ThisItem.FolderName);
                         PaddingBottom: =12
                         PaddingLeft: =12
                         PaddingRight: =12
@@ -1063,6 +1114,20 @@
                         Visible: =ThisItem.IsSelected
                         Width: =4
                         ZIndex: =4
+
+                Spinner1 As Spinner:
+                    Appearance: ='Spinner.Appearance'.Primary
+                    DisplayMode: =DisplayMode.Edit
+                    FillPortions: =1
+                    Height: =200
+                    LayoutMinHeight: =200
+                    LayoutMinWidth: =200
+                    SpinnerSize: ='Spinner.SpinnerSize'.Huge
+                    Visible: =IsLoadingGetAllFiles
+                    Width: =200
+                    X: =0
+                    Y: =0
+                    ZIndex: =4
 
     Button1 As button:
         DisabledBorderColor: =RGBA(166, 166, 166, 1)
