--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -1117,8 +1117,10 @@
 
                 Spinner1 As Spinner:
                     Appearance: ='Spinner.Appearance'.Primary
+                    BasePaletteColor: =
                     DisplayMode: =DisplayMode.Edit
                     FillPortions: =1
+                    FontColor: =
                     Height: =200
                     LayoutMinHeight: =200
                     LayoutMinWidth: =200
