--- a/BSiNS/Src/xmlTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/xmlTemeljniceInventure.fx.yaml
@@ -1153,7 +1153,7 @@
                 
                 IfError(GetXML_Temeljnice_Inventure.Run(file_Name, "ReadyForProcessing"),Notify("Error occurred while Get request, check if file exists.",NotificationType.Error,5000),Set(temeljniceResponse, GetXML_Temeljnice_Inventure.Run(file_Name, "ReadyForProcessing")));
                 
-                Set(journal_line, temeljniceResponse.item_journal_line);
+                UpdateContext({journal_line: temeljniceResponse.item_journal_line});
                 
                 Clear(colJournalLine);
                 
