--- a/BSiNS/Src/xmlTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/xmlTemeljniceInventure.fx.yaml
@@ -1067,8 +1067,8 @@
         HoverColor: =RGBA(255, 255, 255, 1)
         HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
         OnSelect: |+
-            =Set(
-                journalJsonData,
+            =UpdateContext({
+                journalJsonData:
                 JSON(
                     {
                         Lines: {
@@ -1100,8 +1100,7 @@
                         }
                     },JSONFormat.IgnoreUnsupportedTypes
                 )
-            );
-            
+            });
             
             If(!isCreated,UpdateXML.Run(journalJsonData, file_Name, "ReadyForProcessing"));
             
