--- a/BSiNS/Src/xmlNabavniNalog.fx.yaml
+++ b/BSiNS/Src/xmlNabavniNalog.fx.yaml
@@ -997,7 +997,7 @@
                 
                 IfError(GetXML_Nabavni_Nalog.Run(file_Name, "ReadyForProcessing"),
                     Notify("Error occurred while Get request, check if file exists.",NotificationType.Error,5000),
-                    Set(purchase, GetXML_Nabavni_Nalog.Run(file_Name, "ReadyForProcessing"))
+                    UpdateContext({purchase: GetXML_Nabavni_Nalog.Run(file_Name, "ReadyForProcessing")})
                 );
                 
                 UpdateContext({purchase_line: purchase.purchase_line});
