--- a/BSiNS/Src/xmlNabavniNalog.fx.yaml
+++ b/BSiNS/Src/xmlNabavniNalog.fx.yaml
@@ -807,7 +807,6 @@
                     Set(isCreated, true);
                 Size: =15
                 Text: ="Create xml"
-                Underline: =true
                 ZIndex: =2
 
             Button6_1 As button:
@@ -842,6 +841,22 @@
                 Size: =15
                 Text: ="Clear view"
                 ZIndex: =4
+
+            Button6_24 As button:
+                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                DisabledColor: =RGBA(166, 166, 166, 1)
+                DisabledFill: =RGBA(244, 244, 244, 1)
+                Fill: =RGBA(164, 38, 44, 1)
+                FontWeight: =FontWeight.Semibold
+                Height: =50
+                HoverColor: =RGBA(255, 255, 255, 1)
+                HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
+                OnSelect: |-
+                    =Clear(colJournalLine);
+                    Collect(colJournalLine, colOriginalJournalLine);
+                Size: =15
+                Text: ="Reset"
+                ZIndex: =5
 
     "'Upload xml file - modal (brisati poslije)' As group":
         Height: =5
@@ -1156,7 +1171,7 @@
                     );
                 );
                 
-                //Reset(fileName);
+                ClearCollect(colOriginalPurchaseLines, colPurchaseLines);
             Size: =15
             Text: ="Get file"
             Visible: =varShowGetFileModal
