--- a/BSiNS/Src/xmlTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/xmlTemeljniceInventure.fx.yaml
@@ -40,7 +40,10 @@
             )
         );
         
-        
+        ClearCollect(
+            colOriginalJournalLine,
+            colJournalLine
+        );
         //Reset(fileName_1);
 
     ScreenContainer1_1 As groupContainer.verticalAutoLayoutContainer:
@@ -913,13 +916,13 @@
                     Set(Con3Visibility, false);
                 Size: =15
                 Text: ="Create xml"
-                Underline: =true
                 ZIndex: =2
 
             Button6_5 As button:
                 DisabledBorderColor: =RGBA(166, 166, 166, 1)
                 DisabledColor: =RGBA(166, 166, 166, 1)
                 DisabledFill: =RGBA(244, 244, 244, 1)
+                DisplayMode: =DisplayMode.Disabled
                 Fill: =RGBA(164, 38, 44, 1)
                 FontWeight: =FontWeight.Semibold
                 Height: =50
@@ -945,6 +948,22 @@
                 Size: =15
                 Text: ="Clear view"
                 ZIndex: =4
+
+            Button6_23 As button:
+                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                DisabledColor: =RGBA(166, 166, 166, 1)
+                DisabledFill: =RGBA(244, 244, 244, 1)
+                Fill: =RGBA(164, 38, 44, 1)
+                FontWeight: =FontWeight.Semibold
+                Height: =50
+                HoverColor: =RGBA(255, 255, 255, 1)
+                HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
+                OnSelect: |-
+                    =Clear(colJournalLine);
+                    Collect(colJournalLine, colOriginalJournalLine);
+                Size: =15
+                Text: ="Reset"
+                ZIndex: =5
 
     "'Upload xml file_1' As group":
         Height: =5
@@ -1229,7 +1248,10 @@
                     )
                 );
                 
-                
+                ClearCollect(
+                    colOriginalJournalLine,
+                    colJournalLine
+                );
                 //Reset(fileName_1);
             Size: =15
             Text: ="Get file"
