--- a/BSiNS/Src/xmlNabavniNalog.fx.yaml
+++ b/BSiNS/Src/xmlNabavniNalog.fx.yaml
@@ -1,7 +1,7 @@
 "xmlNabavniNalog As screen.'autoLayout_HeaderFooter_ver1.0'":
     Fill: =RGBA(234, 83, 109, 1)
     LoadingSpinnerColor: =RGBA(164, 38, 44, 1)
-    OnVisible: |-
+    OnVisible: |
         =IfError(GetXML_Nabavni_Nalog.Run(SelectedFile, SelectedFolder),
             Notify("Error occurred while Get request, check if file exists.",NotificationType.Error,5000),
             UpdateContext({purchase: GetXML_Nabavni_Nalog.Run(SelectedFile, SelectedFolder)})
@@ -32,6 +32,8 @@
                 }
             );
         );
+        
+        ClearCollect(colOriginalPurchaseLines, colPurchaseLines);
 
     NabavniNalogScreenContainer As groupContainer.verticalAutoLayoutContainer:
         DropShadow: =DropShadow.Light
@@ -852,8 +854,8 @@
                 HoverColor: =RGBA(255, 255, 255, 1)
                 HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
                 OnSelect: |-
-                    =Clear(colJournalLine);
-                    Collect(colJournalLine, colOriginalJournalLine);
+                    =Clear(colPurchaseLines);
+                    Collect(colPurchaseLines, colOriginalPurchaseLines);
                 Size: =15
                 Text: ="Reset"
                 ZIndex: =5
