--- a/BSiNS/Src/xmlPrimke.fx.yaml
+++ b/BSiNS/Src/xmlPrimke.fx.yaml
@@ -1270,13 +1270,13 @@
                     Set(Con3Visibility, false);
                 Size: =15
                 Text: ="Create xml"
-                Underline: =true
                 ZIndex: =2
 
             Button6_20 As button:
                 DisabledBorderColor: =RGBA(166, 166, 166, 1)
                 DisabledColor: =RGBA(166, 166, 166, 1)
                 DisabledFill: =RGBA(244, 244, 244, 1)
+                DisplayMode: =DisplayMode.Disabled
                 Fill: =RGBA(164, 38, 44, 1)
                 FontWeight: =FontWeight.Semibold
                 Height: =50
