--- a/BSiNS/Src/xmlNabavniNalog.fx.yaml
+++ b/BSiNS/Src/xmlNabavniNalog.fx.yaml
@@ -1,8 +1,9 @@
 "xmlNabavniNalog As screen.'autoLayout_HeaderFooter_ver1.0'":
     Fill: =RGBA(234, 83, 109, 1)
     LoadingSpinnerColor: =RGBA(164, 38, 44, 1)
-    OnVisible: |
-        =IfError(GetXML_Nabavni_Nalog.Run(SelectedFile, SelectedFolder),
+    OnVisible: |-
+        =If(!IsBlank(SelectedFile),
+        IfError(GetXML_Nabavni_Nalog.Run(SelectedFile, SelectedFolder),
             Notify("Error occurred while Get request, check if file exists.",NotificationType.Error,5000),
             UpdateContext({purchase: GetXML_Nabavni_Nalog.Run(SelectedFile, SelectedFolder)})
         );
@@ -34,6 +35,7 @@
         );
         
         ClearCollect(colOriginalPurchaseLines, colPurchaseLines);
+        )
 
     NabavniNalogScreenContainer As groupContainer.verticalAutoLayoutContainer:
         DropShadow: =DropShadow.Light
