--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -3,9 +3,7 @@
     LoadingSpinnerColor: =RGBA(164, 38, 44, 1)
     OnHidden: =
     OnVisible: |
-        =//IfError(GetAll.Run("AM-01"),Notify("Error occurred while Get All files request.",NotificationType.Error,2000),Set(getAllFiles, GetAll.Run("AM-01")));
-        //Set(ReadyForProcessingFiles,getAllFiles.allreadyforprocessing);
-        UpdateContext(
+        =UpdateContext(
             {
                 WarehouseCode: "AM-01",
                 IsLoadingGetAllFiles: true
@@ -18,8 +16,8 @@
                         ParseJSON(
                             GetAll.Run(
                                 WarehouseCode,
-                                dd_Status.Selected.Value,
-                                dd_FileType.Selected.Value
+                                dd_Status.Selected.Text,
+                                dd_FileType.Selected.Text
                             ).xmlfiles
                         ) As file,
                         {
@@ -30,6 +28,29 @@
                     )
                 )
             }
+        );
+        UpdateContext({filteredFiles: XMLFiles});
+        If(
+            Not(dd_Status.Selected.Id = "All"),
+            UpdateContext(
+                {
+                    filteredFiles: Filter(
+                        XMLFiles,
+                        dd_Status.Selected.Id = ThisRecord.FolderName
+                    )
+                }
+            )
+        );
+        If(
+            Not(dd_FileType.Selected.Id = "0"),
+            UpdateContext(
+                {
+                    filteredFiles: Filter(
+                        XMLFiles,
+                        dd_FileType.Selected.Id = ThisRecord.FileType
+                    )
+                }
+            )
         );
         UpdateContext({IsLoadingGetAllFiles: false});
 
@@ -955,53 +976,135 @@
                     ZIndex: =1
 
                     dd_Status As Dropdown.pcfdataset:
-                        DefaultSelectedItems: =["All"]
+                        DefaultSelectedItems: |-
+                            =[{Id: "All", Text: "All"}]
                         DisplayMode: =DisplayMode.Edit
                         FillPortions: =1
                         FontSize: =18
                         Height: =50
-                        Items: =["All", "Ready for processing", "In progress"]
+                        Items: |-
+                            =[{Id: "All", Text: "All"}, {Id: "ReadyForProcessing", Text: "Ready for processing"}, {Id: "InProgress", Text: "In progress"}]
                         LayoutMinHeight: =32
                         LayoutMinWidth: =320
                         OnChange: |
-                            =UpdateContext({IsLoadingGetAllFiles: true});
-                            UpdateContext(
-                                {
-                                    XMLFiles: Table(
-                                        ForAll(
-                                            ParseJSON(
-                                                GetAll.Run(
-                                                    WarehouseCode,
-                                                    dd_Status.Selected.Value,
-                                                    dd_FileType.Selected.Value
-                                                ).xmlfiles
-                                            ) As file,
-                                            {
-                                                FileName: Text(file.FileName),
-                                                FileType: Text(file.FileType),
-                                                FolderName: Text(file.FolderName)
-                                            }
+                            =If(
+                                dd_Status.Selected.Id = "All",
+                                UpdateContext({filteredFiles: XMLFiles}),
+                                UpdateContext(
+                                    {
+                                        filteredFiles: Filter(
+                                            XMLFiles,
+                                            dd_Status.Selected.Id = ThisRecord.FolderName
                                         )
-                                    )
-                                }
+                                    }
+                                )
                             );
-                            UpdateContext({IsLoadingGetAllFiles: false});
                         Width: =652
                         X: =0
                         Y: =0
                         ZIndex: =1
 
+                        TextInput2 As pcfDataField.textualColumn:
+                            FieldDisplayName: ="Text"
+                            FieldName: ="Text"
+                            FieldType: ="s"
+                            FieldVariantName: ="textualColumn"
+                            Order: =1
+                            ZIndex: =13
+
                     dd_FileType As Dropdown.pcfdataset:
-                        DefaultSelectedItems: =["All"]
+                        DefaultSelectedItems: |-
+                            =[
+                                {
+                                    Id: "0",
+                                    Text: "All"
+                                }
+                            ]
                         DisplayMode: =DisplayMode.Edit
                         FillPortions: =1
                         FontSize: =18
                         Height: =50
-                        Items: =["All", "Temeljnice inventure", "Nabavni nalozi", "Prodajni nalozi", "Nalozi za prenos", "Skladišne primke", "Skladišne otpremnice", "Put-Away Request", "Pick Request"]
+                        Items: |-
+                            =[
+                                {
+                                    Id: "0",
+                                    Text: "All"
+                                },
+                                {
+                                    Id: "01",
+                                    Text: "Temeljnice inventure"
+                                },
+                                {
+                                    Id: "02",
+                                    Text: "Nabavni nalozi"
+                                },
+                                {
+                                    Id: "03",
+                                    Text: "Prodajni nalozi"
+                                },
+                                {
+                                    Id: "04",
+                                    Text: "Nalozi za prenos"
+                                },
+                                {
+                                    Id: "05",
+                                    Text: "Skladišne primke"
+                                },
+                                {
+                                    Id: "06",
+                                    Text: "Skladišne otpremnice"
+                                },
+                                {
+                                    Id: "07",
+                                    Text: "Put-Away Request"
+                                },
+                                {
+                                    Id: "08",
+                                    Text: "Pick Request"
+                                }
+                            ]
                         LayoutMinHeight: =32
                         LayoutMinWidth: =320
-                        OnChange: |
-                            =UpdateContext({IsLoadingGetAllFiles: true});
+                        OnChange: |-
+                            =If(
+                                dd_FileType.Selected.Id = "0",
+                                UpdateContext({filteredFiles: XMLFiles}),
+                                UpdateContext(
+                                    {
+                                        filteredFiles: Filter(
+                                            XMLFiles,
+                                            dd_FileType.Selected.Id = ThisRecord.FileType
+                                        )
+                                    }
+                                )
+                            )
+                        Width: =647
+                        X: =0
+                        Y: =0
+                        ZIndex: =2
+
+                        TextInput1 As pcfDataField.textualColumn:
+                            FieldDisplayName: ="Text"
+                            FieldName: ="Text"
+                            FieldType: ="s"
+                            FieldVariantName: ="textualColumn"
+                            Order: =1
+                            ZIndex: =11
+
+                    icn_ReloadFiles As icon.Reload:
+                        BorderColor: =RGBA(89, 0, 0, 1)
+                        Color: =RGBA(89, 0, 0, 1)
+                        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                        DisabledColor: =RGBA(244, 244, 244, 1)
+                        Icon: =Icon.Reload
+                        LayoutMinHeight: =16
+                        OnSelect: |-
+                            =UpdateContext(
+                                {
+                                    WarehouseCode: "AM-01",
+                                    IsLoadingGetAllFiles: true
+                                }
+                            );
                             UpdateContext(
                                 {
                                     XMLFiles: Table(
@@ -1009,8 +1112,8 @@
                                             ParseJSON(
                                                 GetAll.Run(
                                                     WarehouseCode,
-                                                    dd_Status.Selected.Value,
-                                                    dd_FileType.Selected.Value
+                                                    dd_Status.Selected.Text,
+                                                    dd_FileType.Selected.Text
                                                 ).xmlfiles
                                             ) As file,
                                             {
@@ -1022,18 +1125,43 @@
                                     )
                                 }
                             );
+                            UpdateContext({filteredFiles: XMLFiles});
+                            If(
+                                Not(dd_Status.Selected.Id = "All"),
+                                UpdateContext(
+                                    {
+                                        filteredFiles: Filter(
+                                            XMLFiles,
+                                            dd_Status.Selected.Id = ThisRecord.FolderName
+                                        )
+                                    }
+                                )
+                            );
+                            If(
+                                Not(dd_FileType.Selected.Id = "0"),
+                                UpdateContext(
+                                    {
+                                        filteredFiles: Filter(
+                                            XMLFiles,
+                                            dd_FileType.Selected.Id = ThisRecord.FileType
+                                        )
+                                    }
+                                )
+                            );
                             UpdateContext({IsLoadingGetAllFiles: false});
-                        Width: =647
-                        X: =0
-                        Y: =0
-                        ZIndex: =2
+                        PaddingBottom: =5
+                        PaddingLeft: =5
+                        PaddingRight: =5
+                        PaddingTop: =5
+                        Width: =32
+                        ZIndex: =3
 
                 "gl_XMLFiles As gallery.'BrowseLayout_Vertical_OneTextVariant_ver5.0'":
                     AlignInContainer: =AlignInContainer.SetByContainer
                     BorderColor: =RGBA(89, 0, 0, 1)
                     DelayItemLoading: =true
                     Height: =321
-                    Items: =XMLFiles
+                    Items: =filteredFiles
                     Layout: =Layout.Vertical
                     LayoutMinHeight: =287
                     LayoutMinWidth: =320
